heavy refactor
prepare connected json as base format, graphML as secondary
moved GraphmlBuilders into their own classes
fixed handling XML content in data and key/default
removed attribute default@default.type (does not exist in GraphML)
improved handling custom XML attributes
better handling of GraphML namespace/schema URIs
XML handling of CDATA sections
extended test abilities for XML/GraphML normalisation/wrapping
renamed internal APIs from startFoo/endFoo to fooStart/endFoo convention
now clean steps from string -> xml -> graphml