@@ -1,13 +1,13 @@
 package com.calpano.graphinout.reader.graphml;
 
-import com.calpano.graphinout.base.graphml.impl.Graphml2XmlWriter;
-import com.calpano.graphinout.foundation.output.InMemoryOutputSink;
+import com.calpano.graphinout.base.graphml.Graphml2XmlWriter;
+import com.calpano.graphinout.foundation.StringFormatter;
 import com.calpano.graphinout.foundation.xml.DelegatingXmlWriter;
 import com.calpano.graphinout.foundation.xml.Xml2AppendableWriter;
+import com.calpano.graphinout.foundation.xml.Xml2StringWriter;
 import com.calpano.graphinout.foundation.xml.XmlFormatter;
 import com.calpano.graphinout.foundation.xml.XmlTool;
 import com.calpano.graphinout.foundation.xml.XmlWriter;
-import com.calpano.graphinout.foundation.xml.XmlWriterImpl;
 import org.apache.commons.io.FileUtils;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -15,10 +15,10 @@ import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 import org.slf4j.Logger;
 
+import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.stream.Stream;
 
 import static com.google.common.truth.Truth.assertThat;
@@ -28,13 +28,20 @@ public class GraphmlTest {
 
     private static final Logger log = getLogger(GraphmlTest.class);
 
-    static Stream<Arguments> graphmlFileProvider() throws Exception {
-        Path testResourcesPath = Paths.get("src/test/resources/graphin/graphml/synthetic/errors");
+    private static Stream<Arguments> allGraphmlFilesFrom(String path) throws IOException {
+        Path testResourcesPath = Path.of(path);
+        // Path testResourcesPath = Paths.get("src/test/resources/graphin/graphml/synthetic/errors");
         int baseLen = testResourcesPath.toString().length() + 1;
         return Files.walk(testResourcesPath).filter(Files::isRegularFile).filter(p -> {
             String pathName = p.toString().toLowerCase();
             return pathName.endsWith(".graphml") || pathName.endsWith(".graphml.xml");
         }).map(p -> Arguments.of(p.toString().substring(baseLen).replace('\\', '/'), p));
+    }
+
+    static Stream<Arguments> graphmlFileProvider() throws Exception {
+        return Stream.concat( //
+                allGraphmlFilesFrom("src/test/resources/graphin/graphml"), //
+                allGraphmlFilesFrom("../base/src/test/resources/xml/graphml"));
     }
 
     @ParameterizedTest(name = "{index}: {0}")
@@ -50,26 +57,30 @@ public class GraphmlTest {
             return;
         }
 
-        // read into string
+        // read into string;
         String xml_in = FileUtils.readFileToString(file.toFile(), StandardCharsets.UTF_8);
+        xml_in = StringFormatter.normalizeLineEndings(xml_in);
 
         // check if that is valid XML to begin with
         XmlFormatter.normalize(xml_in);
 
-        InMemoryOutputSink outputSink = new InMemoryOutputSink();
-        XmlWriter xmlWriter_out =
-                new DelegatingXmlWriter(
-                        new Xml2AppendableWriter(System.out),
-                new XmlWriterImpl(outputSink));
+        Xml2StringWriter xmlWriter = new Xml2StringWriter();
+        XmlWriter xmlWriter_out = new DelegatingXmlWriter(new Xml2AppendableWriter(System.out), xmlWriter);
         /* receive GraphMl events -> send XML events */
         Graphml2XmlWriter graphml2xml = new Graphml2XmlWriter(xmlWriter_out);
         /* receive XML events -> send Graphml events  */
         Xml2GraphmlWriter xml2graphml = new Xml2GraphmlWriter(graphml2xml);
         XmlTool.parseAndWriteXml(file.toFile(), xml2graphml);
-        String xml_out = outputSink.getBufferAsUtf8String();
+        String xml_out = xmlWriter.string();
 
-        String norm_in = XmlFormatter.normalize(xml_in);
-        String norm_out = XmlFormatter.normalize(xml_out);
+        int lineLen = 60;
+        String norm_in = XmlFormatter.wrap(GraphmlFormatter.normalize(xml_in), lineLen);
+        String norm_out = XmlFormatter.wrap(GraphmlFormatter.normalize(xml_out), lineLen);
+
+        // HACK to avoid calc'ing diff for large file
+        if (norm_in.length() > 1024 * 1024) {
+            return;
+        }
         assertThat(norm_out).isEqualTo(norm_in);
     }
 
